--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -127,4 +127,13 @@
   <data name="countries" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\countries.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
+  <data name="NOT_OK" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\NOT_OK.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="OK" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\OK.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="OK_not_OK" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\OK_not_OK.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
